syntax = "proto3";

package useracctdb;

option go_package = "github.com/haguru/horus/useracctdb/internal/routes/protos";

message User {
  // @gotags: bson:"_id,omitempty"
  string id = 1;
  // @gotags: bson:"email" validate:"required,email"`
  string email = 2;
  // @gotags: bson:"username" validate:"required,min=1,max=20"
  string username = 3;
  // @gotags: bson:"password" validate:"required,min=10,max=128"
  string password = 4;

}

message UserRequest {
  // @gotags: bson:"username" validate:"required,email"
  string email = 1; 
}

message PasswordRequest {
  // @gotags: bson:"username" validate:"required,email"
  string email = 1;
  // @gotags: bson:"password" validate:"required,min=10,max=128"
  string password = 2;
}

message Id{
  string value = 1;
}

message Status {
  int32 value = 1;
}

service UserAcctDB{
  rpc Create(User) returns (Id);                          // Create
  rpc GetUser(UserRequest) returns (User);                // Read
  rpc UpdatePassword(PasswordRequest) returns (Status);   // Update
  rpc Delete(UserRequest) returns (Status);               // Delete
}

